--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.69.4",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-web": "0.18.7"
+    "react-native-web": "0.18.7",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
